# keepassxc

./: CMakeLists.txt  snapcraft.yaml
cmake/: FindYubiKey.cmake
src/: CMakeLists.txt
src/browser/: NativeMessagingHost.cpp
src/cli/: CMakeLists.txt
src/core/: Alloc.cpp  Bootstrap.cpp  Database.h  Entry.cpp  EntryAttributes.cpp  EntryAttributes.h  Tools.cpp  Tools.h
src/crypto/: Crypto.cpp  Crypto.h  RandomStream.cpp  RandomStream.h
src/format/: Kdbx3Writer.cpp  Kdbx4Reader.cpp  Kdbx4Writer.cpp  KdbxReader.cpp  KdbxReader.h  KdbxXmlReader.cpp
src/gui/entry/: EditEntryWidget.cpp
src/keeshare/: CMakeLists.txt  ShareObserver.cpp
src/keys/: FileKey.cpp  YkChallengeResponseKey.cpp
src/keys/drivers/: YubiKey.cpp
tests/: CMakeLists.txt  TestAutoType.cpp  TestEntryModel.cpp  TestKeePass2Format.cpp  TestModified.cpp
